--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,6 +54,7 @@
 @import 'overlays/move.css';
 @import 'overlays/delete.css';
 @import 'overlays/download.css';
+@import 'overlays/details.css';
 @import 'overlays/log.css';
 @import 'overlays/settings.css';
 @import 'overlays/context-menu.css';
